# rangebar-patterns

./: .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
backtest/: CLAUDE.md
designs/: CLAUDE.md  exp082-long-only-meanrev-nn.md  gen600-plan.md
findings/: 2026-02-02-brute-force-synthesis.md  2026-02-05-production-readiness-audit.md  2026-02-07-beyond-kelly-metrics.md  2026-02-07-overnight-sweep-forensic-analysis.md  2026-02-11-feature-column-provenance-audit.md  2026-02-12-gen600-oracle-validation.md  2026-02-12-gen600-sweep-results.md  2026-02-13-kelly-alternatives-tail-risk-evaluation.md  2026-02-13-kelly-deep-dive-3-methods.md  2026-02-14-temporal-regularity-deep-research.md  2026-02-15-mcdm-pareto-ranking-methods.md  CLAUDE.md
issues/: CLAUDE.md  alpha-forge-129-meta-abstention.md  alpha-forge-130-exp079-telemetry.md  alpha-forge-131-ood-robustness.md  alpha-forge-133-feature-audit.md  cc-skills-21-feature-selection.md
logs/: CLAUDE.md  gen300_barrier_grid.jsonl
scripts/: CLAUDE.md  champion_oracle_compare.py  gen600_oracle_compare.py  gen600_oracle_compare_exh_l.py  gen610_backtest_validation.py  gen720_best_barriers.py  gen720_oracle_compare.py  gen720_query.py  gen720_ranking_experiments.py  gen800_publish.sh  gen800_rank.py  gen800_reconstruct.py  gen800_rolling_rdd.py  gen800_sweep.py  mcdm_benchmark.py  publish_findings.sh  rank_optimize.py  recompute_stage4.py  tamrs_poc.py  verify_ap15.py  verify_ap15.sql  verify_ap15_compare.py  walk_forward_barriers.py
sql/: CLAUDE.md  champion_oracle_trades.sql  gen01_single_feature.sql  gen02_two_feature.sql  gen03_three_feature.sql  gen04_temporal.sql  gen05_crossasset.sql  gen06_lookback.sql  gen07_meanrev.sql  gen08_divergence.sql  gen108_nolookahead.sql  gen109_nla_temporal.sql  gen110_nla_crossasset.sql  (+56 more)
(+517 files in other folders)
